next/prev buttons; fixed distorted sizes; "no images found" for the empty folder

--- a/demo/css.css
+++ b/demo/css.css
@@ -14,6 +14,18 @@
     text-decoration: underline;
 }
 
+.thumbnail-viewer-prev, .thumbnail-viewer-next {
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    color: #ffffff;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.thumbnail-viewer-prev:hover, .thumbnail-viewer-next:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    text-decoration: none;
+}
 
 /*
 The style below is for index.html only,
@@ -24,6 +36,7 @@ it has no effect in the module
     height: 150px;
     display: inline-block;
     padding: 10px;
+    object-fit: contain;
 }
 body>a {
     text-decoration: none;
